add bkp2U, other bash scripts; update .dvcz

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-junk*
+*.bak
+*.jar
+*.java
+*.log
+*.swp
+*ZZZ
 .committed
-.localgitignore
 .merkle
 .posted
 .sharedev
-.svn*
-*.swp
 .wrapped
-CVS
-*ZZZ
-*~
-*.java
-*.jar
-*.log
+.xlattice
+build
+junk*
 tmp
